added InMemory abstraction