@@ -19,8 +19,17 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	// Core JWT support
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+
+	// Runtime dependencies for signing and JSON serialization
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+}
+test {
+	jvmArgs '-XX:+EnableDynamicAgentLoading'
 }
 
 tasks.named('test') {
